
    HADOOP-11498. Bump the version of HTrace to 3.1.0-incubating (Masatake
    Iwasaki via Colin P. McCabe)

    HADOOP-11442. hadoop-azure: Create test jar.
    (Shashank Khandelwal via cnauroth)

    HADOOP-11648. Set DomainSocketWatcher thread name explicitly.
    (Liang Xie via ozawa)

    HADOOP-11430. Add GenericTestUtils#disableLog, GenericTestUtils#setLogLevel
    (cmccabe)

  OPTIMIZATIONS

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

  BUG FIXES

    HADOOP-11595. Add default implementation for AbstractFileSystem#truncate. (yliu)

    HADOOP-11368. Fix SSLFactory truststore reloader thread leak in
    KMSClientProvider. (Arun Suresh via wang)

    HADOOP-11333. Fix deadlock in DomainSocketWatcher when the notification pipe
    is full. (zhaoyunjiong via cmccabe)

    HADOOP-11710. Make CryptoOutputStream behave like DFSOutputStream wrt
    synchronization. (Sean Busbey via yliu)

    HADOOP-11604. Prevent ConcurrentModificationException while closing domain
    sockets during shutdown of DomainSocketWatcher thread. (cnauroth)

    HADOOP-11482. Use correct UGI when KMSClientProvider is called by a proxy
    user. Contributed by Arun Suresh.

    HADOOP-11350. The size of header buffer of HttpServer is too small when
    HTTPS is enabled. (Benoy Antony via wheat9)

Release 2.6.0 - 2014-11-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10433. Key Management Server based on KeyProvider API. (tucu)

    HADOOP-10893. isolated classloader on the client side (Sangjin Lee via
    jlowe)

    HADOOP-10400. Incorporate new S3A FileSystem implementation. (Jordan
    Mendelson and Dave Wang via atm)

  IMPROVEMENTS

    HADOOP-10808. Remove unused native code for munlock. (cnauroth)

    HADOOP-10815. Implement Windows equivalent of mlock. (cnauroth)

    HADOOP-7664. Remove warmings when overriding final parameter configuration